<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello">Lab 2 GUI</string>
    <string name="ButtonText">CLICK HERE</string>
    <string name="CheckBoxText">Check this out</string>
    <string name="SwitchText">Switch on / off</string>
    <string name="SwitchOff">Switch is off </string>
    <string name="SwitchOn">Switch is on </string>
    <string name="hint_1">Enter Name Here</string>
    <string name="toast_message">Here is more information</string>
    <string name="email">Enter email address:</string>
    <string name="hint_email">Type Email Here</string>
    <string name="password">Type your password:</string>
    <string name="login">LOGIN</string>
    <string name="profile_label">Your profile</string>
    <string name="name_label">Your name:</string>
    <string name="email_label">Your email:</string>
    <string name="picture_label">Your picture:</string>
    <string name="cam_label">Click the button above to take a picture</string>
    <string name="hint_name">Enter Your name</string>
    <string name="hint_email2">Enter your email</string>

    <string name="chat">Go To Chat</string>
    <string name="recieve">Recieve</string>
    <string name="send">Send</string>
    <string name="msg_text">Message goes here</string>
    <string name="msg_hint">Type Here</string>


</resources>